# stereoCamera

./: .gitignore  README.md  build.gradle  settings.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/ads/release/: output.json
android/app/paid/release/: output.json
android/app/src/androidTest/java/com/munger/stereocamera/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: about.html  align.html  base.css  coming.html  connect.html  controls.html  eula.html  index.html  index.js  prereqs.html  privacy.html  sync.html  welcome.html
android/app/src/main/assets/exec/arm64-v8a/: stereoCameraImageProcessor
android/app/src/main/assets/exec/armeabi-v7a/: stereoCameraImageProcessor
android/app/src/main/assets/exec/x86/: stereoCameraImageProcessor
android/app/src/main/assets/exec/x86_64/: stereoCameraImageProcessor
android/app/src/main/cpp/: AnaglyphCompositeImage.cpp  AnaglyphCompositeImageStream.cpp  GreenMagentaCompositeImage.cpp  GreenMagentaCompositeImageStream.cpp  Image.cpp  PreProcessor.cpp  RedCyanCompositeImage.cpp  RedCyanCompositeImageStream.cpp  SplitCompositImageStream.cpp  SplitCompositeImage.cpp  SplitCompositeImageStream.cpp  com_munger_stereocamera_service_PhotoProcessor.h  com_munger_stereocamera_service_PhotoProcessor_CompositeImageType.h  jpegCtrl.cpp  main.cpp  native-lib.cpp  util.cpp
android/app/src/main/cpp/include/: AnaglyphCompositeImage.h  AnaglyphCompositeImageStream.h  CompositeImage.h  GreenMagentaCompositeImage.h  GreenMagentaCompositeImageStream.h  Image.h  PreProcessor.h  RedCyanCompositeImage.h  RedCyanCompositeImageStream.h  SideData.h  SplitCompositeImage.h  SplitCompositeImageStream.h  jpegCtrl.hpp  util.h
android/app/src/main/cpp/jpeg-9c/: Android.mk  Makefile  config.status
android/app/src/main/java/com/munger/stereocamera/: BaseActivity.java  BaseFragment.java  GenericFileProvider.java  MainActivity.java  MyApplication.java
android/app/src/main/res/drawable/: delete_icon_white.xml  hand_phone.xml  launch_screen.xml  shutter_icon_small.xml
android/app/src/main/res/layout/: activity_main.xml  dialog_discover.xml  dialog_instagram.xml  dialog_listen.xml  fragment_connect.xml  fragment_connect_horizontal.xml  fragment_gallery.xml  fragment_gallery_grid_thumbnail.xml  fragment_master.xml  fragment_master_horizontal.xml  fragment_slave.xml  fragment_slave_horizontal.xml  fragment_thumbnail.xml  fragment_thumbnail_collection_object.xml  fragment_thumbnail_toolbar.xml
android/app/src/main/res/menu/: gallery_menu.xml  master_menu.xml
android/app/src/main/res/values/: array.xml  attrs.xml  colors.xml  strings.xml  styles.xml
android/app/src/main/res/xml/: preferences.xml  provider_paths.xml
android/app/src/main/resources/lib/arm64-v8a/: stereoCameraImageProcessor
android/app/src/main/resources/lib/armeabi-v7a/: stereoCameraImageProcessor
android/app/src/main/resources/lib/x86/: stereoCameraImageProcessor
android/app/src/test/java/com/munger/stereocamera/: ExampleUnitTest.java
app/: CMakeLists.txt  build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: about.html  align.html  base.css  connect.html  eula.html  index.html  prereqs.html  privacy.html  welcome.html
app/src/main/cpp/: AnaglyphCompositeImage.cpp  CompositeImage.cpp  CompositeImage.h  GreenMagentaCompositeImage.cpp  Image.cpp  SplitCompositeImage.cpp  com_munger_stereocamera_service_PhotoProcessor.h  com_munger_stereocamera_utility_PhotoProcessor.h  com_munger_stereocamera_utility_PhotoProcessor_PhotoStruct.h  jpegCtrl.cpp  jpegCtrl.h  native-lib.c  native-lib.cpp  util.cpp  util.h
app/src/main/cpp/include/: AnaglyphCompositeImage.h  CompositeImage.h  GreenMagentaCompositeImage.h  Image.h  SplitCompositeImage.h  util.h
app/src/main/cpp/jpeg-9c/: jpeglib.h  libtool
app/src/main/java/com/munger/stereocamera/: BaseActivity.java  MainActivity.java  MyApplication.java
app/src/main/java/com/munger/stereocamera/bluetooth/: BluetoothComm.java  BluetoothCommands.java  BluetoothCtrl.java  BluetoothDiscoverer.java  BluetoothMaster.java  BluetoothMasterComm.java  BluetoothReceiver.java  BluetoothSlave.java  BluetoothSlaveComm.java  Preferences.java
app/src/main/java/com/munger/stereocamera/fragment/: AutoFitTextureView.java  ConnectFragment.java  DiscoverDialog.java  DiscoverDialogItem.java  DiscoverDialogList.java  HelpFragment.java  ImageViewerFragment.java  ListenDialog.java  MasterFragment.java  MasterFragment2.java  MasterHandshake.java  PreviewFragment.java  SettingsFragment.java  SlaveFragment.java
app/src/main/java/com/munger/stereocamera/orientation/: MasterOrientationCtrl.java  OrientationCtrl.java  OrientationWidget.java
app/src/main/java/com/munger/stereocamera/service/: InstagramTransform.java  PhotoProcessor.java  PhotoProcessorService.java  PhotoProcessorServiceReceiver.java
app/src/main/java/com/munger/stereocamera/utility/: AudioAmbientAnalysis.java  AudioAnalyser.java  AudioSync.java  InteractiveReceiver.java  PhotoFiles.java  PhotoProcessor.java  Preferences.java
app/src/main/java/com/munger/stereocamera/widget/: AudioSource.java  AudioSyncWidget.java  LoadingWidget.java  OrientationCtrl.java  OrientationWidget.java  PreviewOverlayWidget.java  PreviewWidget.java  SlavePreviewOverlayWidget.java  SquareLayout.java  ThumbnailWidget.java  (+1 more)
app/src/main/res/drawable/: glasses.xml  hand_phone_right.xml  hand_phone_white.xml  hand_phone_white_right.xml
app/src/main/res/layout/: activity_main.xml  dialog_discover.xml  dialog_discover_item.xml  dialog_listen.xml  fragment_connect.xml  fragment_master.xml  fragment_master2.xml  fragment_master_horizontal.xml  fragment_slave.xml  fragment_slave_horizontal.xml  fragment_thumbnail.xml  fragment_thumbnail_collection_object.xml  widget_zoom.xml
app/src/main/res/menu/: connect_menu.xml  image_viewer_menu.xml  master_menu.xml
app/src/main/res/values/: array.xml  strings.xml  styles.xml
app/src/main/res/xml/: preferences.xml  provider_paths.xml
app/src/paid/: google-services.json
(+469 files in other folders)
